# jack-connect

./: CABINET_INTEGRATION.md  JackConnect_Walkthrough.html  README.md  SOLOMON_OS_GTM.md  SPEC.md  cognee-jack.py  install-jackconnect.sh  jobs.json  onboard-jack.sh  setup.sh  test-fake-agent.sh
apps/cma-builder/: index.html
apps/daily-briefing/: index.html
apps/watch-once/: index.html
bonsai-bridge/: README.md  bridge.py
cabinet/: .env.example  .gitignore  AI-claude-editor.md  AI_PROVIDER_RUNTIME_PROGRESS.md  CABINETAI.md  CABINET_UI_WORK_SUMMARY.md  CLAUDE.md  EDITOR.md  PROGRESS.md  cabinet-release.json  deployment-packaging-versioning.md  forge.config.cjs  next.config.ts  notifications.md  package-lock.json  package.json  tsconfig.json
cabinet/cabinetai/: README.md  package.json  (+3 more)
cloud-browser/: Dockerfile  docker-compose.yaml  hermes-skill.yaml  server.py  start.sh
daily-briefing/: briefing.py
demo/: DEMO_WALKTHROUGH.md
desktop-app/: SPEC.md  index.html  package-lock.json  package.json
desktop-app/src-tauri/: Cargo.toml  tauri.conf.json
desktop-app/src-tauri/src/: install.rs  main.rs
grocery-deals/: deal_pipeline.py  grocery_bot.py  scrape_all.py  telegram_handler.py
jack-dashboard/: Dockerfile  start.sh
jcpaird-agents/: JCPAID_AGENTS.md
link-test/: link_analyzer.py
pashov-skills-reference/: CLAUDE.md  CODE_OF_CONDUCT.md  SECURITY.md
petpal/: SPEC.md
prospects/: ez-heating-cooling.json  small-biz-test-lead.json
solomon-companion/: SPEC.md  core.py
time-saver-ai/: SPEC.md
watch-once/: server.py  watch_once.py  watch_once_loop.py
(+549 files in other folders)
